docs: comprehensive documentation overhaul for v0.9.0
- Update all command counts 33→42 across README, docs, site
- Remove all --enable-preview references (14 in configuration.md, 6 in troubleshooting.md)
- docs/README.md: rewrite with current feature list, Spring Boot/Micrometer mentions
- docs/usage.md: add 8 new commands to key commands table
- docs/cli-commands.md: update command count header
- docs/configuration.md: remove --enable-preview from all examples (Docker, K8s, etc)
- docs/troubleshooting.md: remove --enable-preview section, update compilation advice
- site/index.html: update badges and counts
- README.md: categorized command table with 42 commands

Signed-off-by: rlaope <piyrw9754@gmail.com>